[package]
name = "reward-based-productivity-system-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0.87"
sysinfo="0.26.7"
chrono={version = "0.4.23", features =["serde"]}